// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`6. Template and Snapshot Tests > 6.3: Dark mode snapshot > includes dark mode styles in component output 1`] = `
"/* Generated by Crucible — edit freely, re-generate with --force */

.btn {
  --btn-radius: var(--radius-md);
  --btn-font-weight: 500;
  --btn-transition: background-color 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;

  display:         inline-flex;
  align-items:     center;
  justify-content: center;
  gap:             calc(var(--spacing-unit) * 2);
  font-family:     var(--font-family);
  font-weight:     var(--btn-font-weight);
  border:          1px solid transparent;
  cursor:          pointer;
  border-radius:   var(--btn-radius);
  transition:      var(--btn-transition);
}

.btn:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px var(--color-background), 0 0 0 4px var(--color-primary);
}

@media (prefers-reduced-motion: reduce) {
  .btn { transition: none; }
}

/* Sizes - standard: xs, sm, md, lg, icon */
.btn--xs    { min-height: 2rem; padding: 0 0.5rem; font-size: 0.75rem; }
.btn--sm    { min-height: calc(var(--spacing-unit) * 9); padding: 0 calc(var(--spacing-unit) * 3); font-size: 0.875rem; }
.btn--md    { min-height: calc(var(--spacing-unit) * 10); padding: 0 calc(var(--spacing-unit) * 4); font-size: 1rem; }
.btn--lg    { min-height: calc(var(--spacing-unit) * 11); padding: 0 calc(var(--spacing-unit) * 8); font-size: 1.125rem; }
.btn--icon  { min-height: 2.5rem; width: 2.5rem; padding: 0; }

/* Variants - standard */
.btn--default   { background: var(--color-primary);   color: var(--color-primary-foreground); border-color: transparent; }
.btn--primary   { background: var(--color-primary);   color: var(--color-primary-foreground); border-color: transparent; }
.btn--secondary { background: var(--color-secondary); color: var(--color-secondary-foreground); border-color: transparent; }
.btn--outline   { background: transparent;           color: var(--color-foreground);        border-color: var(--color-border); }
.btn--ghost     { background: transparent;           color: var(--color-foreground);        border-color: transparent; }
.btn--link      { background: transparent;           color: var(--color-primary);           border-color: transparent; text-decoration: underline; text-underline-offset: 4px; }
.btn--destructive { background: var(--color-destructive); color: var(--color-destructive-foreground); border-color: transparent; }

.btn--default:not(:disabled):hover     { opacity: 0.9; }
.btn--primary:not(:disabled):hover   { opacity: 0.9; }
.btn--secondary:not(:disabled):hover { background: var(--color-secondary); opacity: 0.8; }
.btn--outline:not(:disabled):hover   { background: var(--color-accent); color: var(--color-accent-foreground); }
.btn--ghost:not(:disabled):hover     { background: var(--color-accent); color: var(--color-accent-foreground); }
.btn--link:not(:disabled):hover      { text-decoration: underline; }
.btn--destructive:not(:disabled):hover { opacity: 0.9; }

/* States */
.btn--disabled, .btn:disabled { opacity: 0.45; cursor: not-allowed; }
.btn--loading  { cursor: wait; }

.spinner {
  width: 1em; height: 1em;
  border: 2px solid currentColor;
  border-top-color: transparent;
  border-radius: 50%;
  animation: spin 0.6s linear infinite;
}
@keyframes spin { to { transform: rotate(360deg); } }
"
`;

exports[`6. Template and Snapshot Tests > 6.7: SCSS nested BEM > generates nested BEM output in SCSS 1`] = `
"/* Generated by Crucible — edit freely, re-generate with --force */

:root {
  --card-header-padding: calc(var(--spacing-unit) * 6);
  --card-content-padding: calc(var(--spacing-unit) * 6);
  --card-footer-padding: calc(var(--spacing-unit) * 6);
  --card-border-radius: var(--radius-lg);
  --card-background-color: var(--color-surface);
  --card-border-color: var(--color-border);
  --card-shadow: 0 1px 3px rgba(0,0,0,0.1), 0 1px 2px rgba(0,0,0,0.06);
  --button-height-sm: calc(var(--spacing-unit) * 9);
  --button-height-md: calc(var(--spacing-unit) * 10);
  --button-height-lg: calc(var(--spacing-unit) * 11);
  --button-padding-x-sm: calc(var(--spacing-unit) * 3);
  --button-padding-x-md: calc(var(--spacing-unit) * 4);
  --button-padding-x-lg: calc(var(--spacing-unit) * 8);
  --button-border-radius: var(--radius-md);
  --button-font-weight: 500;
  --button-transition: background-color 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
  --input-height: calc(var(--spacing-unit) * 10);
  --input-padding-x: calc(var(--spacing-unit) * 3);
  --input-border-radius: var(--radius-md);
  --input-border-color: var(--color-border);
  --input-transition: border-color 0.2s ease, box-shadow 0.2s ease;
  --Dialog-padding: calc(var(--spacing-unit) * 6);
  --Dialog-border-radius: var(--radius-lg);
  --Dialog-overlay-bg: rgba(0, 0, 0, 0.4);
  --Dialog-shadow: 0 20px 25px -5px rgba(0,0,0,0.1), 0 10px 10px -5px rgba(0,0,0,0.04);
  --Dialog-z-index: 1000;
  --select-height: calc(var(--spacing-unit) * 10);
  --select-padding-x: calc(var(--spacing-unit) * 3);
  --select-border-radius: var(--radius-md);
  --select-option-padding: calc(var(--spacing-unit) * 2.5);
  --select-dropdown-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05);
  --select-z-index: 900;
  --table-row-height: calc(var(--spacing-unit) * 10);
  --table-header-height: calc(var(--spacing-unit) * 10);
  --table-border-radius: var(--radius-md);
  --table-pagination-height: calc(var(--spacing-unit) * 8);
  --table-virtual-overscan: 5;
  --table-cell-padding: calc(var(--spacing-unit) * 3);
  --table-row-hover-bg: var(--color-secondary);
  --table-striped-bg: var(--color-background);
  --popover-background: var(--color-surface);
  --popover-border: var(--color-border);
  --popover-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05);
  --popover-radius: var(--radius-md);
  --popover-padding: calc(var(--spacing-unit) * 2);
  --popover-z-index: 50;
  --color-primary: #6C63FF;
  --color-secondary: #F3F2FF;
  --color-surface: #FFFFFF;
  --color-background: #F8F9FA;
  --color-border: #E2E1F0;
  --color-text: #1A1A2E;
  --color-text-muted: #6B6B8A;
  --color-destructive: #E24B4A;
  --color-success: #1D9E75;
  --color-primary-foreground: #FFFFFF;
  --color-secondary-foreground: #1A1A2E;
  --color-destructive-foreground: #FFFFFF;
  --color-accent-foreground: #1A1A2E;
  --foreground: #1A1A2E;
  --radius-sm: 4px;
  --radius-md: 8px;
  --radius-lg: 12px;
  --spacing-unit: 4px;
  --font-family: system-ui, sans-serif;
  --font-size-base: 16px;
}

@media (prefers-color-scheme: dark) {
  --color-primary: #9ba0ff;
  --color-secondary: #131420;
  --color-surface: #1a1a2e;
  --color-background: #0f0f1a;
  --color-border: #6c63ff26;
  --color-text: #f1f5f9;
  --color-text-muted: #94a3b8;
  --color-destructive: #ff6d68;
  --color-success: #49be93;
  --color-primary-foreground: #1a1a2e;
  --color-secondary-foreground: #f1f5f9;
  --color-destructive-foreground: #1a1a2e;
  --color-accent-foreground: #f1f5f9;
  --foreground: #f1f5f9;
}

/* Generated by Crucible — edit freely, re-generate with --force */

.btn {
  --btn-radius: var(--radius-md);
  --btn-font-weight: 500;
  --btn-transition: background-color 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;

  display:         inline-flex;
  align-items:     center;
  justify-content: center;
  gap:             calc(var(--spacing-unit) * 2);
  font-family:     var(--font-family);
  font-weight:     var(--btn-font-weight);
  border:          1px solid transparent;
  cursor:          pointer;
  border-radius:   var(--btn-radius);
  transition:      var(--btn-transition);
}

.btn:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px var(--color-background), 0 0 0 4px var(--color-primary);
}

@media (prefers-reduced-motion: reduce) {
  .btn { transition: none; }
}

/* Sizes - standard: xs, sm, md, lg, icon */
.btn--xs    { min-height: 2rem; padding: 0 0.5rem; font-size: 0.75rem; }
.btn--sm    { min-height: calc(var(--spacing-unit) * 9); padding: 0 calc(var(--spacing-unit) * 3); font-size: 0.875rem; }
.btn--md    { min-height: calc(var(--spacing-unit) * 10); padding: 0 calc(var(--spacing-unit) * 4); font-size: 1rem; }
.btn--lg    { min-height: calc(var(--spacing-unit) * 11); padding: 0 calc(var(--spacing-unit) * 8); font-size: 1.125rem; }
.btn--icon  { min-height: 2.5rem; width: 2.5rem; padding: 0; }

/* Variants - standard */
.btn--default   { background: var(--color-primary);   color: var(--color-primary-foreground); border-color: transparent; }
.btn--primary   { background: var(--color-primary);   color: var(--color-primary-foreground); border-color: transparent; }
.btn--secondary { background: var(--color-secondary); color: var(--color-secondary-foreground); border-color: transparent; }
.btn--outline   { background: transparent;           color: var(--color-foreground);        border-color: var(--color-border); }
.btn--ghost     { background: transparent;           color: var(--color-foreground);        border-color: transparent; }
.btn--link      { background: transparent;           color: var(--color-primary);           border-color: transparent; text-decoration: underline; text-underline-offset: 4px; }
.btn--destructive { background: var(--color-destructive); color: var(--color-destructive-foreground); border-color: transparent; }

.btn--default:not(:disabled):hover     { opacity: 0.9; }
.btn--primary:not(:disabled):hover   { opacity: 0.9; }
.btn--secondary:not(:disabled):hover { background: var(--color-secondary); opacity: 0.8; }
.btn--outline:not(:disabled):hover   { background: var(--color-accent); color: var(--color-accent-foreground); }
.btn--ghost:not(:disabled):hover     { background: var(--color-accent); color: var(--color-accent-foreground); }
.btn--link:not(:disabled):hover      { text-decoration: underline; }
.btn--destructive:not(:disabled):hover { opacity: 0.9; }

/* States */
.btn--disabled, .btn:disabled { opacity: 0.45; cursor: not-allowed; }
.btn--loading  { cursor: wait; }

.spinner {
  width: 1em; height: 1em;
  border: 2px solid currentColor;
  border-top-color: transparent;
  border-radius: 50%;
  animation: spin 0.6s linear infinite;
}
@keyframes spin { to { transform: rotate(360deg); } }
"
`;
